# league-mod

./: .gitignore  Cargo.toml  champion_data.json  champions_with_skins.json  example.json  skin_ids.json  version.json
crates/ltk-manager/: .gitignore  metadata.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
crates/ltk-manager/src/: routeTree.gen.ts
crates/ltk-manager/src-tauri/: Cargo.toml  tauri.conf.json
crates/ltk-manager/src-tauri/capabilities/: default.json
crates/ltk-manager/src-tauri/src/: main.rs  state.rs
crates/ltk-manager/src-tauri/src/commands/: app.rs  data.rs  images.rs  merge_data.rs  mod.rs  mod_skin.rs  patcher.rs  settings.rs  swap.rs  wad.rs
crates/ltk-manager/src-tauri/src/patcher/: mod.rs
crates/ltk-manager/src/components/: ChampionCard.tsx  ChampionDetail.tsx  ChampionGrid.tsx  Sidebar.tsx  SkinCardVariant.tsx  SkinImage.tsx
crates/ltk-manager/src/lib/: tauri.ts
crates/ltk-manager/src/modules/progress/: index.ts
crates/ltk-manager/src/modules/progress/components/: GlobalProgressBar.tsx  index.ts
crates/ltk-manager/src/modules/progress/context/: index.ts  (+1 more)
crates/ltk-manager/src/pages/: Library.tsx  Settings.tsx  SwapDemo.tsx
crates/ltk-manager/src/routes/: __root.tsx  demo.tsx
crates/ltk-swapper/: Cargo.toml
crates/ltk-swapper/src/: lib.rs  remapper.rs
crates/wadtools/: Cargo.toml  README.md
crates/wadtools/src/: extractor.rs  lib.rs  main.rs
crates/wadtools/src/commands/: diff.rs  download_hashes.rs  extract.rs  list.rs  mod.rs
crates/wadtools/src/utils/: config.rs  hashtable.rs  mod.rs
(+2 files in other folders)
