[package]
name = "wadtools"
version = "0.5.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
toml = "0.8.19"
fancy-regex = "0.16.2"
league-toolkit = { version = "0.2.4", features = ["serde"] }
color-eyre = "0.6"
tracing = "0.1.41"
parking_lot = "0.12.3"
walkdir = "2.4.0"
itertools = "0.12.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3.2", features = ["local-time"] }
colored = "2"
csv = "1.3.1"
time = "0.3.37"
tracing-indicatif = "0.3.13"
indicatif = "0.18"
directories-next = "2.0"
dirs-next = "2.0"
camino = "1.1"
convert_case = "0.9.0"
ureq = "2.12"
